# ************************************************************************
#
# This file is part of the Cal3D library/package
# Copyright (C) 2006 Loic Dachary <loic@dachary.org>
# Copyright (C) 2002 Bruno 'Beosil' Heidelberger (beosil@swileys.com)
#
# This library is free software; you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# ************************************************************************

bin_PROGRAMS = cal3d_cally

cal3d_cally_SOURCES = main.cpp demo.cpp model.cpp menu.cpp tick.cpp tga.cpp

noinst_HEADERS = global.h demo.h model.h menu.h tick.h tga.h

# ************************************************************************

