PROJECT(miniviewer_gl_vp)


#ADD_DEFINITIONS(-Dx64BIT)

FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
 

SET(PROJECT_INCLUDES
global.h  tga.h  tick.h  viewer.h
)
 

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} "./" )


INCLUDE_DIRECTORIES( ${CMAKE_HOME_DIRECTORY}/src)

SET(PROJECT_SOURCES 
${PROJECT_INCLUDES}
main.cpp  tga.cpp  tick.cpp  viewer.cpp
)


include_directories(${GLEW_INCLUDE_PATH})
INCLUDE_DIRECTORIES(   ${GLUT_INCLUDE_PATH})
 

IF(WIN32)

ELSE(WIN32)

 SET(ADDITIONALS_LIBS
 GL
 GLU
 )

ENDIF(WIN32)



ADD_DEFINITIONS(-DGLEW_STATIC)
ADD_EXECUTABLE(miniviewer_gl_vp ${PROJECT_SOURCES}   )
TARGET_LINK_LIBRARIES(miniviewer_gl_vp cal3d  ${ADDITIONALS_LIBS} 
  ${GLUT_LIBRARY}  ${GLEW_LIBRARY}
)
SET_TARGET_PROPERTIES(miniviewer_gl_vp PROPERTIES PROJECT_LABEL "Application miniviewer_glvp" )


